[package]
name = "fast-with-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitcoin = { version = "0.32", features = ["bitcoinconsensus", "serde"] }
hashes = "0.1.9"
hex = "0.4.3"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
sha256 = "1.5.0"
